--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 canvas{
     width: 100%;
     align-self: center;
@@ -14,11 +18,64 @@ canvas{
 .header {
     grid-column: 2;
     grid-row: 1;
-    background-color: grey;
+    font-size: large;
 }
 
 .scene {
+    border-radius: 10px;
     grid-column: 2;
     grid-row: 2;
     float: none;
+    box-shadow: 0 0 10px gray;
+}
+
+.simulation {
+    margin-top: 10px;
+    border-radius: 10px;
+    grid-column: 2;
+    grid-row: 3;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 0 10px gray;
+}
+
+.notbold{
+    font-weight:normal;
+}
+
+.slidecontainer {
+    width: auto;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    height: 25px; /* Specified height */
+    width: auto;
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #04AA6D; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #04AA6D; /* Green background */
+    cursor: pointer; /* Cursor on hover */
 }
