--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    color: #262228;
 }
 
 canvas{
@@ -10,7 +11,7 @@ canvas{
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 2fr 1fr;
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
 }
@@ -18,14 +19,15 @@ canvas{
 .header {
     grid-column: 2;
     grid-row: 1;
-    font-size: large;
+    font-size: 24px;
 }
 
 .scene {
     border-radius: 10px;
     grid-column: 2;
     grid-row: 2;
-    float: none;
+    display: flex;
+    justify-content: center;
     box-shadow: 0 0 10px gray;
 }
 
@@ -35,47 +37,100 @@ canvas{
     grid-column: 2;
     grid-row: 3;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     box-shadow: 0 0 10px gray;
 }
 
-.notbold{
-    font-weight:normal;
+.sliderInput{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.sliderLabel{
+    min-width: 100px;
+    display: flex;
+    margin-left: 10px;
+    justify-content: left;
 }
 
 .slidecontainer {
-    width: auto;
+    margin: 10px;
+    width: 100%;
 }
 
-/* Mouse-over effects */
 .slider:hover {
-    opacity: 1; /* Fully shown on mouse-over */
+    opacity: 1; 
 }
 
 .slider {
-    -webkit-appearance: none;  /* Override default CSS styles */
+    -webkit-appearance: none;  
     appearance: none;
-    height: 25px; /* Specified height */
-    width: auto;
-    background: #d3d3d3; /* Grey background */
-    outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    border-radius: 3px;
+    height: 25px; 
+    width: 100%;
+    background: #d3d3d3; 
+    outline: none; 
+    opacity: 0.7; 
+    -webkit-transition: .2s; 
     transition: opacity .2s;
+    box-shadow: 0 3px #999;
 }
 
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    background: #04AA6D; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 25px; 
+    height: 25px; 
+    background: #262228; 
+    cursor: pointer; 
 }
 
 .slider::-moz-range-thumb {
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    background: #04AA6D; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 25px; 
+    height: 25px; 
+    background: #262228; 
+    cursor: pointer; 
+}
+
+.genetic{
+    margin-top: 10px;
+    border-radius: 10px;
+    grid-column: 2;
+    grid-row: 4;
+    display: flex;
+    flex-wrap: wrap;
+    box-shadow: 0 0 10px gray;
+}
+
+.button {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 10px 10px;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #037584;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 3px #999;
+}
+
+.button:hover {background-color: #04616d}
+
+.button:active {
+    background-color: #04616d;
+    transform: translateY(1px);
+}
+
+.notbold{
+    font-weight:normal;
 }
