--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ canvas{
     cursor: pointer; 
 }
 
-.genetic{
+.genetic {
     margin-top: 10px;
     border-radius: 10px;
     grid-column: 2;
@@ -106,6 +106,40 @@ canvas{
     flex-wrap: wrap;
     box-shadow: 0 0 10px gray;
 }
+
+.results {
+    margin: 10px;
+    border-radius: 10px;
+    background-color: #d3d3d3;
+    box-shadow: 0 0 10px gray;
+}
+
+.resultsHeader {
+    background-color: #037584;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+.resultsSub {
+    margin: 10px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 15px;
+}
+
+.resultsLabel {
+    font-size: 16px;
+    font-weight: normal;
+}
+
 
 .button {
     margin-top: 5px;
