--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ canvas{
 .header {
     grid-column: 2;
     grid-row: 1;
-    font-size: 24px;
+    font-size: 22px;
 }
 
 .scene {
@@ -97,20 +97,11 @@ canvas{
     cursor: pointer; 
 }
 
-.genetic {
+.results {
     margin-top: 10px;
     border-radius: 10px;
     grid-column: 2;
     grid-row: 4;
-    display: flex;
-    flex-wrap: wrap;
-    box-shadow: 0 0 10px gray;
-}
-
-.results {
-    margin: 10px;
-    border-radius: 10px;
-    background-color: #d3d3d3;
     box-shadow: 0 0 10px gray;
 }
 
@@ -123,22 +114,30 @@ canvas{
     justify-content: center;
     align-items: center;
     font-size: 18px;
+    font-weight: bold;
     color: white;
 }
 
 .resultsSub {
     margin: 10px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     height: 15px;
+}
+
+.graph {
+    margin-top: 10px;
+    border-radius: 10px;
+    grid-column: 2;
+    grid-row: 5;
+    box-shadow: 0 0 10px gray;
 }
 
 .resultsLabel {
     font-size: 16px;
     font-weight: normal;
 }
-
 
 .button {
     margin-top: 5px;
